crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_type_var_tuple_missing_default.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_type_var_tuple_missing_default.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            18,
        ),
        range: 0..44,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        7,
                    ),
                    range: 0..19,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                1,
                            ),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..13,
                            node_index: NodeIndex(
                                4,
                            ),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 7..12,
                                        node_index: NodeIndex(
                                            3,
                                        ),
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 8..10,
                                            node_index: NodeIndex(
                                                2,
                                            ),
                                        },
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                6,
                            ),
                            range: 16..19,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        17,
                    ),
                    range: 20..43,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                9,
                            ),
                            range: 25..26,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 26..37,
                            node_index: NodeIndex(
                                14,
                            ),
                            type_params: [
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        range: 27..32,
                                        node_index: NodeIndex(
                                            11,
                                        ),
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 28..30,
                                            node_index: NodeIndex(
                                                10,
                                            ),
                                        },
                                        default: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 34..36,
                                        node_index: NodeIndex(
                                            13,
                                        ),
                                        name: Identifier {
                                            id: Name("T2"),
                                            range: 34..36,
                                            node_index: NodeIndex(
                                                12,
                                            ),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                16,
                            ),
                            range: 40..43,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[*Ts =] = int
  |             ^ Syntax Error: Expected an expression
2 | type X[*Ts =, T2] = int
  |


  |
1 | type X[*Ts =] = int
2 | type X[*Ts =, T2] = int
  |             ^ Syntax Error: Expected an expression
  |
